// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execa-webpack-plugin many arguments in hook (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin many arguments in hook (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"assetEmitted\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"assetEmitted\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin many arguments in hook (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin many arguments in hook (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin many arguments in hook (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"thisCompilation\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"thisCompilation\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin many arguments in hook (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"not-found\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"not-found\\" return \\"ENOENT\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"not-found\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"not-found\\" return \\"ENOENT\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should not throw error with 'bail: false' option (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should output warning on empty hook: logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "warn",
    Array [
      "No commands found for \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should throw error invalid 'onFooBar' option (no hooks) 1`] = `[Error: The hook "fooBar" not found]`;

exports[`execa-webpack-plugin should throw error invalid 'onFooBar' option (no hooks): logs 1`] = `Array []`;

exports[`execa-webpack-plugin should throw error on 'infrastructureLog' hook 1`] = `[Error: Do not use "infrastructureLog" hook]`;

exports[`execa-webpack-plugin should throw error on 'infrastructureLog' hook: logs 1`] = `Array []`;

exports[`execa-webpack-plugin should throw error on 'on*' options are empty (no events) 1`] = `[TypeError: No known hooks found]`;

exports[`execa-webpack-plugin should throw error on 'on*' options are empty (no events): logs 1`] = `Array []`;

exports[`execa-webpack-plugin should throw error with 'bail: true' option (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"not-found\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"not-found\\" return \\"ENOENT\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should throw error with 'bail: true' option (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"not-found\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"not-found\\" return \\"ENOENT\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/cli-stdout-stderr.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: stdout",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "The output of the process on stderr: stderr",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/cli-stdout-stderr.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: stdout",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "The output of the process on stderr: stderr",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work and output 'stdout' and 'stderr' (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 1) (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 1) (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 1) (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 2) (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 2) (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 2) (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 4) (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 16) (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 16) (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work multiple commands and do not overload the system (the number of cores is 16) (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir \\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"rmdir \\" return \\"Command failed with exit code 1: rmdir ",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir \\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "error",
    Array [
      "Error: Command \\"rmdir \\" return \\"Command failed with exit code 1: rmdir ",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work when nested commands return nothing and 'bail: false' (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'on*' options: errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'on*' options: logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"environment\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"environment\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"afterEnvironment\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"afterEnvironment\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"entryOption\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"entryOption\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"afterPlugins\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"afterPlugins\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"afterResolvers\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"afterResolvers\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"beforeRun\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"beforeRun\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"run\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"run\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"normalModuleFactory\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"normalModuleFactory\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"contextModuleFactory\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"contextModuleFactory\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"beforeCompile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"beforeCompile\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"thisCompilation\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"thisCompilation\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compilation\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compilation\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"make\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"make\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"afterCompile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"afterCompile\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"shouldEmit\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"shouldEmit\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"emit\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"emit\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"afterEmit\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"afterEmit\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nothing.js\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with 'on*' options: warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onCompile' and 'dev' is 'false' option (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onCompile' and 'dev' is 'false' option (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with 'onCompile' and 'dev' is 'false' option (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onCompile' option (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onCompile' option (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with 'onCompile' option (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onDone' and 'dev' is 'false' options (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onDone' and 'dev' is 'false' options (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with 'onDone' and 'dev' is 'false' options (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onDone' option (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with 'onDone' option (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with 'onDone' option (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with deep nested commands (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with deep nested commands (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested-nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/resources/nested.js",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with deep nested commands (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with deep nested commands (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with deep nested commands (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested-nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/resources/nested.js",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with deep nested commands (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with multiple nested commands (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with multiple nested commands (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested-other-other.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested-other.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir /__tests__/other-dir /__tests__/other-other-dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/other-dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/other-other-dir",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with multiple nested commands (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with multiple nested commands (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with multiple nested commands (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested-other.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/other-dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir /__tests__/other-dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with multiple nested commands (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with nested commands (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with nested commands (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with nested commands (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with nested commands (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with nested commands (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"node /__tests__/resources/nested.js\\" (the result will be used as an argument)",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The output of the process on stdout: /__tests__/dir",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with nested commands (sync hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with options (async hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with options (async hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"done\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir/nested\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"done\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with options (async hook): warnings 1`] = `Array []`;

exports[`execa-webpack-plugin should work with options (sync hook): errors 1`] = `Array []`;

exports[`execa-webpack-plugin should work with options (sync hook): logs 1`] = `
Array [
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Running the \\"compile\\" hook",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "Run command \\"rmdir /__tests__/dir/nested\\"",
    ],
  ],
  Array [
    "ExecaPlugin",
    "log",
    Array [
      "The \\"compile\\" hook completed",
    ],
  ],
]
`;

exports[`execa-webpack-plugin should work with options (sync hook): warnings 1`] = `Array []`;
